Inmob-Salesforce/force-app/main/default/objects/EspecificacionTecnica__c/EspecificacionTecnica__c.object-meta.xml
<CustomObject>
    <label>Especificación Técnica</label>
    <nameField>
        <displayFormat>ET-{0000000}</displayFormat>
        <label>Código</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Especificaciones Técnicas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>