Inmob-Salesforce/force-app/main/default/objects/EspecificacionTecnica__c/fields/AcabadoAdicional__c.field-meta.xml
<CustomField>
    <fullName>AcabadoAdicional__c</fullName>
    <label>Acabado Adicional</label>
    <type>TextArea</type>
</CustomField>