Inmob-Salesforce/force-app/main/default/objects/EspecificacionTecnica__c/fields/Caracteristica__c.field-meta.xml
<CustomField>
    <fullName>Caracteristica__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Caracteristica</label>
    <referenceTo>Caracteristica__c</referenceTo>
    <relationshipLabel>Especificación Técnicas</relationshipLabel>
    <relationshipName>EspecificacinesTecnicas</relationshipName>
    <type>Lookup</type>
</CustomField>