Inmob-Salesforce/force-app/main/default/objects/EspecificacionTecnica__c/fields/Modelo__c.field-meta.xml
<CustomField>
    <fullName>Modelo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Modelo</label>
    <referenceTo>Modelo__c</referenceTo>
    <relationshipLabel>Especificación Técnicas</relationshipLabel>
    <relationshipName>Especificaci_n_T_cnicas</relationshipName>
    <type>Lookup</type>
</CustomField>