Inmob-Salesforce/force-app/main/default/objects/EspecificacionTecnica__c/fields/MostrarCotizacion__c.field-meta.xml
<CustomField>
    <fullName>MostrarCotizacion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mostrar en Cotización</label>
    <type>Checkbox</type>
</CustomField>